--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "dscjobs-api",
+  "version": "1.0.0",
+  "description": "Official Fastify Server for the DscJobs API",
+  "main": "index.js",
   "dependencies": {
     "discord.js": "^13.3.1",
-    "fastify": "^3.24.1",
+    "fastify": "^3.22.1",
     "fastify-swagger": "^4.12.6",
-    "mongoose": "^6.1.1"
-  }
+    "mongoose": "^6.0.12"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "author": "DscJobs",
+  "license": "MIT"
 }
