--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Official Fastify Server for the DscJobs API",
   "main": "index.js",
+  "engineStrict" : true,
+
+  "engines" : { 
+      "node" : "16.x" 
+  },
   "dependencies": {
     "discord.js": "^13.3.1",
     "fastify": "^3.22.1",
